# Masters_of_literature

./: profiler_results_and_conclusions  profiling_results.prof  pyproject.toml  report.ipynb  run_analysis.py
masters_of_literature/: __main__.py  parse_args.py
masters_of_literature/my_types/: positive_int.py
masters_of_literature/read_input/: read_text.py
masters_of_literature/tests/: __init__.py  test_autorship_prob.py  test_my_types.py  test_parse_args.py  test_read_text.py  test_text_differences.py  test_text_stats.py
masters_of_literature/text_analysis/: text_authorship_prob.py  text_differences.py  text_stats.py
masters_of_literature/texts/: dziady_cz_3.txt  grazyna.txt  moja_beatrycze.txt  sklepy_cynamonowe.txt
